--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,42 @@
         </dependency>
         
         <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j</artifactId>
+            <version>1.3.M05</version>
+        </dependency>
+                
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>1.0.0.M1</version>
+        </dependency>         
+        
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-neo4j</artifactId>
+            <version>1.0.0.M4</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>0.15.2</version>
+        </dependency> 
+        
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch-river-twitter</artifactId>
+            <version>0.15.2</version>
+        </dependency> 
+        
+        <dependency>
+            <groupId>com.restfb</groupId>
+            <artifactId>restfb</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+                
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>3.0.5.RELEASE</version>
@@ -86,6 +122,27 @@
          <snapshots>
             <enabled>true</enabled>
          </snapshots>
+      </repository>
+      <repository>
+          <id>neo4j-public-repository</id>
+          <name>Publically available Maven 2 repository for Neo4j</name>
+          <url>http://m2.neo4j.org</url>
+          <snapshots>
+              <enabled>true</enabled>
+          </snapshots>
+      </repository>
+      <repository>
+          <id>spring-maven-milestone</id>
+          <name>Springframework Maven milestone Repository</name>
+          <url>http://maven.springframework.org/milestone</url>
+      </repository> 
+      <repository>
+          <id>oss-sonatype-releases</id>
+          <name>sonatype releases</name>
+          <url>http://oss.sonatype.org/content/repositories/releases/</url>  
+          <releases>
+             <enabled>true</enabled>
+         </releases>
       </repository>
    </repositories>
     
