--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-neo4j</artifactId>
-            <version>1.0.0.M4</version>
+            <version>1.0.0.RC1</version>
         </dependency>
         
         <dependency>
@@ -106,6 +106,19 @@
                     <source>1.6</source>
                     <target>1.6</target>
                     <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.8</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <oauth.consumer.key>${oauth.consumer.key}</oauth.consumer.key>
+                        <oauth.consumer.secret>${oauth.consumer.secret}</oauth.consumer.secret>
+                        <oauth.access.token>${oauth.access.token}</oauth.access.token>
+                        <oauth.access.token.secret>${oauth.access.token.secret}</oauth.access.token.secret>               
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
